[package]
name = "l0p1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
